# siona

./: .gitignore  CHANGELOG.md  LICENSE  PKG1_DECISION.md  PUBLISH_GATE.md  README.md  pyproject.toml
.github/workflows/: siona-publish.yml
docs/adr/: 0001-knowledge-is-genome-native-not-plaintext.md  0002-one-laplacian-two-reads-op-operand-responsion.md  0003-no-plaintext-toc-content-addressed-index.md  0004-dna-plus-g4-dna-region-dependent-encoding.md  0005-byte-glyph-no-doctoring-punctuation-is-a-sublanguage.md  0006-the-lichen-set-of-genomes-coexpressed-on-demand.md  0007-output-is-sentences-attested-and-cited.md  0008-grounded-intent-over-positional-router.md  README.md
siona/: CHANGELOG.md  README.md  __init__.py  analytic.py  anchor.py  asl.py  asl_lex.json  boards.py  bridge.py  chirality.py  cli.py  conceptnet.py  context_shape.py  couple.py  dataset.py  g4.py  genome_store.py  goal_typing.py  graft.py  infer.py  introspect.py  knowledge_genome.py  operand_typing.py  photosynth.py  planner.py  reconstruct.py  register.py  relate.py  sense.py  srmech_profile.toml  story.py  sumerian.py  synthetic.py  translate.py
siona/descriptors/: bislama_udhr.toml
siona/tests/: test_alias_and_codeswitch.py  test_bag_regression.py  test_bislama_board.py  test_frames_and_graph_operands.py  test_infer_smoke.py  test_structured_operands.py  test_subnote_extraction.py  test_superpose_accrete.py  test_synthesis_wiki_kernel_trig.py
siona/tests/fixtures/: testlang_board.toml
